--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="موقع لمشاهدة أحدث الأفلام والمسلسلات بتصنيفات متنوعة.">
+  <meta name="keywords" content="أفلام, مسلسلات, عربي, أكشن, كوميديا, دراما">
+  <meta name="author" content="مفيش ريموت؟">
+
   <title>مفيش ريموت؟</title>
   <style>
     * {
