--- a/details.html
+++ b/details.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NBLTHJSVJZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NBLTHJSVJZ');
+</script>
   <title>تفاصيل فيلم الدشاش</title>
   <style>
     body {
@@ -127,6 +136,5 @@
   <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1rmBlXwSDHTRSKw3-rPXwX8VeqoBE1TYm" target="_blank">
     ⬇️ تحميل الفيلم
   </a>
-
 </body>
 </html>
