--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <meta name="description" content="موقع لمشاهدة أحدث الأفلام والمسلسلات بتصنيفات متنوعة.">
   <meta name="keywords" content="أفلام, مسلسلات, عربي, أكشن, كوميديا, دراما">
   <meta name="author" content="مفيش ريموت؟">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NBLTHJSVJZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NBLTHJSVJZ');
+</script>
   <title>مفيش ريموت؟</title>
   <style>
     * {
