--- a/Foreign films.html
+++ b/Foreign films.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="موقع لمشاهدة أحدث الأفلام والمسلسلات بتصنيفات متنوعة.">
   <meta name="keywords" content="أفلام, مسلسلات, عربي, أكشن, كوميديا, دراما">
-  <meta name="author" content="مفيش ريموت؟">
-  <title>مفيش ريموت؟</title>
+  <meta name="author" content="يلا سينما">
+  <title>يلا سينما</title>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4V6L8966P"></script>
 <script>
@@ -179,7 +179,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">📺 مفيش ريموت؟</div>
+    <div class="logo">📺 يلا سينما</div>
     <div class="menu-toggle" id="menu-toggle">
       <div></div>
       <div></div>
@@ -225,10 +225,10 @@
       </div>
     </div>
     <div class="movie-card" onclick="location.href='Foreign_details2.html'">
-      <img src="ballerina.jpg" alt="فيلم Ballerina 2025 مترجم">
+      <img src="Kingdom of the Planet of the Apes 2024.jpg" alt="فيلم Kingdom of the Planet of the Apes 2024 مترجم">
       <div class="movie-info">
-        <div class="movie-title">فيلم Ballerina 2025 مترجم</div>
-        <div class="movie-desc">دراما - أكشن - تشويق</div>
+        <div class="movie-title">فيلم Kingdom of the Planet of the Apes 2024 مترجم</div>
+        <div class="movie-desc"> أكشن - تشويق</div>
       </div>
     </div>
     <div class="movie-card" onclick="location.href='Foreign_details3.html'">
@@ -241,7 +241,7 @@
   </section>
 
   <footer>
-    مفيش ريموت؟ عندنا الحل! - أفلامك المفضلة دايمًا في جيبك
+    يلا سينما عندنا الحل! - أفلامك المفضلة دايمًا في جيبك
   </footer>
 
   <script>
