--- a/Foreign_details2.html
+++ b/Foreign_details2.html
@@ -114,30 +114,30 @@
   <a class="back-link" href="Foreign films.html">← العودة إلى القائمة</a>
 
   <div class="movie-detail-container">
-    <img src="ballerina.jpg" alt="فيلم Ballerina 2025 مترجم">
+    <img src="Kingdom of the Planet of the Apes 2024.jpg" alt="فيلم Kingdom of the Planet of the Apes 2024 مترجم">
     <div>
-      <h1 class="movie-title">فيلم Ballerina 2025 مترجم</h1>
+      <h1 class="movie-title">فيلم Kingdom of the Planet of the Apes 2024 مترجم</h1>
       <p class="movie-description">
-        حيث تسعى (إيف) المرأة الشابة للانتقام ممن قاموا بالتخلص من عائلتها، حين يتقاطع دربها مع (جون ويك) القاتل المحترف الذي اعتزل حياة الإجرام.
-    </p>
+حيث بعد مرور العديد من السنوات على فترة حكم (سيزر)، يظهر قرد صغير وسط العالم الجديد، حيث يتخذ العديد من القرارات التي ستغير مستقبل القردة والبشر إلى الأبد.
+      </p>
     </div>
   </div>
 
   <!-- ✅ تشغيل الفيديو من Google Drive -->
   <div class="video-container">
     <iframe 
-      src="https://drive.google.com/file/d/13wOODP9mpRhgBR1Pk8zQ5CK_DYUgjdj2/preview" 
+      src="https://drive.google.com/file/d/1k5oZvwBuLz6nTkPICHPX68TJP_A4koVd/preview" 
       allow="autoplay" 
       allowfullscreen>
     </iframe>
   </div>
 
   <!-- ✅ زر تنزيل مفعّل -->
-  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1FQGeG_AU29vaU9TcVw6z08iDFqrzyG_d" target="_blank">
+  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1wosFQKvigBhuY4R7Y878xetqvurxXLsT" target="_blank">
     ⬇️ تحميل الفيلم 480
   </a>
   <!-- ✅ زر تنزيل مفعّل -->
-  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=13wOODP9mpRhgBR1Pk8zQ5CK_DYUgjdj2" target="_blank">
+  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1k5oZvwBuLz6nTkPICHPX68TJP_A4koVd" target="_blank">
     ⬇️ تحميل الفيلم 720
   </a>
 </body>
