--- a/details2.html
+++ b/details2.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google tag (gtag.js) -->
+  <title>تفاصيل فيلم سيكو سيكو</title>
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NBLTHJSVJZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,7 +13,6 @@
 
   gtag('config', 'G-NBLTHJSVJZ');
 </script>
-  <title>تفاصيل فيلم سيكو سيكو</title>
   <style>
     body {
       background-color: #111;
@@ -127,18 +127,19 @@
   <!-- ✅ تشغيل الفيديو من Google Drive -->
   <div class="video-container">
     <iframe 
-      src="https://drive.google.com/file/d/1Aj4zG1Kp0OXhwXuOq_rH0iUCvGyDYL3i/preview"
+      src="https://drive.google.com/file/d/1tPqgNmh1Pz8wHrxmLUxliSLRrEmLQc_k/preview"
       allow="autoplay" 
       allowfullscreen>
     </iframe>
   </div>
 
-  <!-- ✅ زر التحميل الجديد -->
-  <a 
-    href="https://drive.google.com/uc?export=download&id=1Aj4zG1Kp0OXhwXuOq_rH0iUCvGyDYL3i" 
-    class="download-button" 
-    target="_blank">
-    ⬇️ تحميل الفيلم
+  <!-- ✅ زر تنزيل مفعّل -->
+  <a class="download-button" href="https://drive.google.com/uc?export=download&id=1Aj4zG1Kp0OXhwXuOq_rH0iUCvGyDYL3i" target="_blank">
+    ⬇️ تحميل الفيلم 480
+  </a>
+  <!-- ✅ زر تنزيل مفعّل -->
+  <a class="download-button" href="https://drive.google.com/uc?export=download&id=1tPqgNmh1Pz8wHrxmLUxliSLRrEmLQc_k" target="_blank">
+    ⬇️ تحميل الفيلم 720
   </a>
 
 </body>
