--- a/details3.html
+++ b/details3.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google tag (gtag.js) -->
+  <title>تفاصيل فيلم وش في وش</title>
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NBLTHJSVJZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,7 +13,6 @@
 
   gtag('config', 'G-NBLTHJSVJZ');
 </script>
-  <title>تفاصيل فيلم وش في وش</title>
   <style>
     body {
       background-color: #111;
@@ -127,17 +127,18 @@
   <!-- ✅ مشغل Google Drive -->
   <div class="video-container">
     <iframe 
-      src="https://drive.google.com/file/d/1jWP4Hv9kiCd9C4KeGz_4R9P9grwbES4G/preview" 
+      src="https://drive.google.com/file/d/1J9cmWWM5YiDdR6wN4RTtjFCUhRUJv7qr/preview" 
       allow="autoplay" allowfullscreen>
     </iframe>
   </div>
 
-  <!-- ✅ زر التحميل الجديد -->
-  <a 
-    href="https://drive.google.com/uc?export=download&id=1jWP4Hv9kiCd9C4KeGz_4R9P9grwbES4G" 
-    class="download-button" 
-    target="_blank">
-    ⬇️ تحميل الفيلم
+    <!-- ✅ زر تنزيل مفعّل -->
+  <a class="download-button" href="https://drive.google.com/uc?export=download&id=1jWP4Hv9kiCd9C4KeGz_4R9P9grwbES4G" target="_blank">
+    ⬇️ تحميل الفيلم 480
+  </a>
+  <!-- ✅ زر تنزيل مفعّل -->
+  <a class="download-button" href="https://drive.google.com/uc?export=download&id=1J9cmWWM5YiDdR6wN4RTtjFCUhRUJv7qr" target="_blank">
+    ⬇️ تحميل الفيلم 720
   </a>
 
 </body>
