--- a/details.html
+++ b/details.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google tag (gtag.js) -->
+  <title>تفاصيل فيلم الدشاش</title>
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NBLTHJSVJZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,7 +13,6 @@
 
   gtag('config', 'G-NBLTHJSVJZ');
 </script>
-  <title>تفاصيل فيلم الدشاش</title>
   <style>
     body {
       background-color: #111;
@@ -133,8 +133,12 @@
   </div>
 
   <!-- ✅ زر تنزيل مفعّل -->
+  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=18jfNoD8ZyP_TGQilXY9BxDZSVZVaSpSi" target="_blank">
+    ⬇️ تحميل الفيلم 480
+  </a>
+  <!-- ✅ زر تنزيل مفعّل -->
   <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1rmBlXwSDHTRSKw3-rPXwX8VeqoBE1TYm" target="_blank">
-    ⬇️ تحميل الفيلم
+    ⬇️ تحميل الفيلم 720
   </a>
 </body>
 </html>
