--- a/details9.html
+++ b/details9.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NBLTHJSVJZ"></script>
+  <title>تفاصيل فيلم ولاد رزق 3</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F7FK1LF6LZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-NBLTHJSVJZ');
+  gtag('config', 'G-F7FK1LF6LZ');
 </script>
-  <title>تفاصيل فيلم ولاد رزق 3</title>
   <style>
     body {
       background-color: #111;
