--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="author" content="يلا سينما">
   <title>يلا سينما</title>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M4V6L8966P"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F7FK1LF6LZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-M4V6L8966P');
+  gtag('config', 'G-F7FK1LF6LZ');
 </script>
   <style>
     * {
