--- a/details5.html
+++ b/details5.html
@@ -13,6 +13,15 @@
 
   gtag('config', 'G-F7FK1LF6LZ');
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F7FK1LF6LZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F7FK1LF6LZ');
+</script>
   <style>
     body {
       background-color: #111;
