--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
   gtag('config', 'G-F7FK1LF6LZ');
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F7FK1LF6LZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F7FK1LF6LZ');
+</script>
   <style>
     * {
       margin: 0;
