--- a/details8.html
+++ b/details8.html
@@ -14,13 +14,13 @@
   gtag('config', 'G-F7FK1LF6LZ');
 </script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F7FK1LF6LZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JC2GN5JVBE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-F7FK1LF6LZ');
+  gtag('config', 'G-JC2GN5JVBE');
 </script>
   <style>
     body {
