--- a/Foreign films.html
+++ b/Foreign films.html
@@ -247,6 +247,34 @@
         <div class="movie-desc">دراما - أكشن - تشويق</div>
       </div>
     </div>
+    <div class="movie-card" onclick="location.href='Foreign_details4.html'">
+      <img src="John-Wick-1-scaled-367x550.jpg" alt="فيلم John Wick 2014 مترجم">
+      <div class="movie-info">
+        <div class="movie-title">فيلم John Wick 2014 مترجم</div>
+        <div class="movie-desc">جريمة - أكشن - تشويق</div>
+      </div>
+    </div>
+    <div class="movie-card" onclick="location.href='Foreign_details5.html'">
+      <img src="John-Wick-2-scaled-367x550.jpg" alt="فيلم John Wick 2017 مترجم">
+      <div class="movie-info">
+        <div class="movie-title">فيلم John Wick 2017 مترجم</div>
+        <div class="movie-desc">دراما - أكشن - تشويق</div>
+      </div>
+    </div>
+    <div class="movie-card" onclick="location.href='Foreign_details6.html'">
+      <img src="John-Wick-3-scaled-367x550.jpg" alt="فيلم John Wick 2019 مترجم">
+      <div class="movie-info">
+        <div class="movie-title">فيلم John Wick 2019 مترجم</div>
+        <div class="movie-desc">دراما - أكشن - تشويق</div>
+      </div>
+    </div>
+    <div class="movie-card" onclick="location.href='Foreign_details7.html'">
+      <img src="john-wick-4.jpg" alt="فيلم John Wick 2023 مترجم">
+      <div class="movie-info">
+        <div class="movie-title">فيلم John Wick 2023 مترجم</div>
+        <div class="movie-desc">دراما - أكشن - تشويق</div>
+      </div>
+    </div>
   </section>
 
   <footer>
