--- a/index.html
+++ b/index.html
@@ -184,6 +184,59 @@
         display: flex;
       }
     }
+  /* ... الكود السابق ... */
+
+  .dropdown {
+    position: relative;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #2c2c2c;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
+    z-index: 1001;
+  }
+
+  .dropdown-content a {
+    color: #fff;
+    padding: 10px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 15px;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #444;
+    color: #f90;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  @media (max-width: 768px) {
+    .dropdown-content {
+      position: static;
+      box-shadow: none;
+      background-color: transparent;
+    }
+
+    .dropdown-content a {
+      padding: 10px 10px;
+      font-size: 14px;
+      border-bottom: 1px solid #333;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: none;
+    }
+
+    .dropdown.active .dropdown-content {
+      display: block;
+    }
+  }
   </style>
 </head>
 <body>
@@ -196,10 +249,21 @@
     </div>
     <nav id="nav-menu">
       <a href="index.html">الرئيسية</a>
-      <a href="#">أفلام</a>
-      <a href="#">مسلسلات</a>
+      <div class="dropdown">
+  <a href="#">أفلام ▾</a>
+  <div class="dropdown-content">
+    <a href="Foreign films.html">أفلام أجنبية</a>
+    <a href="arabic-movies.html">أفلام مصرية</a>
+  </div>
+</div>
+<div class="dropdown">
+      <a href="#">مسلسلات ▾</a>
+      <div class="dropdown-content">
+    <a href="Foreign films.html">مسلسلات أجنبية</a>
+    <a href="arabic-movies.html">مسلسلات مصرية</a>
+  </div>
+  </div>
       <a href="http://wa.me/+201030348832" target="_blank">اتصل بنا</a>
-      <a href="Foreign films.html">أفلام أجنبية</a>
     </nav>
   </header>
 
@@ -292,6 +356,16 @@
   </footer>
 
   <script>
+    // دعم القائمة المنسدلة في الجوال
+document.querySelectorAll('.dropdown > a').forEach(link => {
+  link.addEventListener('click', function(e) {
+    if (window.innerWidth <= 768) {
+      e.preventDefault();
+      this.parentElement.classList.toggle('active');
+    }
+  });
+});
+
     const toggle = document.getElementById('menu-toggle');
     const navMenu = document.getElementById('nav-menu');
     toggle.addEventListener('click', () => {
